# VibeCoding_BaseballAnalysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_QUERY_GUIDE.md  AI_SETUP_CHOOSE.md  CHANGELOG.md  CI_CD_PIPELINE.md  CI_CD_SUCCESS.md  CODE_EXPLAINED.md  DEPLOYMENT_GUIDE.md  DEPLOY_NEXT_STEPS.md  DEPLOY_NOW.md  DEPLOY_TO_STREAMLIT.md  Dockerfile  FREE_AI_SETUP.md  GETTING_STARTED.md  GUI_GUIDE.md  HUMAN_TEST_RESULTS.md  ISSUE_REPORTING_QUICKSTART.md  LICENSE  LOCAL_TESTING_WORKFLOW.md  OLLAMA_SETUP.md  PLAYER_IMAGES_QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TEAM_LEAGUE_FILTERING.md  TESTING_SUMMARY.md  TEST_RESULTS.md  VERSION_BUMP_QUICKSTART.md  WEB_APP_SUMMARY.md  demo_ai_queries.py  diagnose_comparison_bug.py  docker-compose.yml  pyproject.toml  requirements.prod.txt  requirements.txt  requirements_streamlit.txt  requirements_web.txt  (+29 more)
.github/workflows/: auto-version.yml  ci.yml  deploy.yml  nightly.yml  pr-check.yml  production-deploy.yml
.streamlit/: config.toml  secrets.toml.example
data/cache/: .gitignore
docs/: ARCHITECTURE.md  AUTO_VERSION_SUMMARY.md  BEST_PRACTICES.md  DOCUMENTATION_REVIEW_2025.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_REPORTING.md  PLAYER_IMAGES.md  PRODUCTION_BEST_PRACTICES_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS.md  STREAMLIT_CLOUD_DEPLOYMENT.md  UPTIME_MONITORING.md  VERSION_BUMPING.md  VERSION_MANAGEMENT.md  WHAT_HAPPENS_WHEN_YOU_PUSH.md  code_caching_proposal.py  retry_feature.md
notebooks/: example_analysis.ipynb
scripts/: bump_version.py
src/: __init__.py  ai_query_handler.py  analytics.py  data_fetcher.py  data_processor.py  github_issue_reporter.py  logger.py  mlb_gui.py  monitoring.py  name_normalizer.py  player_images.py  secret_manager.py  stat_constants.py  visualizations.py
tests/: README.md  __init__.py  test_ai_comparison_logic.py  test_ai_defensive_coding.py  test_ai_retry_feature.py  test_cache.py  test_comparison_scenarios.py  test_data_fetcher.py  test_data_processor.py  test_friendly_messages.py  test_query_parser.py  test_search_performance.py
utils/: ai_code_cache.py  cache.py  helpers.py
